--- a/config.json
+++ b/config.json
@@ -8,7 +8,9 @@
       ],
       "tensorPath": "https://raw.githubusercontent.com/XDlabPascal/spatialsearch/main/tensors.tsv",
       "metadataPath": "https://raw.githubusercontent.com/XDlabPascal/spatialsearch/main/movies.tsv"
-  
+    "sprite": {
+        "imagePath": "https://raw.githubusercontent.com/XDlabPascal/spatialsearch/main/sprite.png",
+        "singleImageDim": [32, 32]
     }
   ]
 }
