--- a/config.json
+++ b/config.json
@@ -2,11 +2,11 @@
   "embeddings": [
     {
       "tensorName": "VOD Spatial Search",
-      "tensorShape": [1000, 128],
+      "tensorShape": [1024, 128],
       "tensorPath": "https://raw.githubusercontent.com/XDlabPascal/spatialsearch/main/tensors.tsv",
       "metadataPath": "https://raw.githubusercontent.com/XDlabPascal/spatialsearch/main/movies.tsv"
     "sprite": {
-        "imagePath": "sprite.png",
+        "imagePath": "https://raw.githubusercontent.com/XDlabPascal/spatialsearch/main/sprite.png",
         "singleImageDim": [32, 32]
     }
   ]
