--- a/testconfig.json
+++ b/testconfig.json
@@ -1,13 +1,13 @@
 {
   "embeddings test": [
     {
-      "tensorName": "My Embeddings",
-      "tensorShape": [1024, 128],
+      "tensorName": "My Embeddings 27",
+      "tensorShape": [100, 128],
       "tensorPath": "https://raw.githubusercontent.com/XDlabPascal/spatialsearch/main/tensors.tsv",
       "metadataPath": "https://raw.githubusercontent.com/XDlabPascal/spatialsearch/main/movies.tsv",
       "sprite": {
         "imagePath": "https://raw.githubusercontent.com/XDlabPascal/spatialsearch/main/sprite.png",
-        "singleImageDim": [32, 32]
+        "singleImageDim": [45, 60]
       }
     }
   ]
