--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
   "embeddings": [
     {
-      "tensorName": "VOD Search",
-      "tensorShape": [100, 128],
+      "tensorName": "VOD Search 10",
+      "tensorShape": [100, 20],
       "tensorPath": "https://raw.githubusercontent.com/XDlabPascal/spatialsearch/main/tensors.tsv",
       "metadataPath": "https://raw.githubusercontent.com/XDlabPascal/spatialsearch/main/movies.tsv",
       "sprite": {
